


run-2.00（进行中）
------------------------------------------------------------------------
1.全面弃用InstaPy
2.全面改版login流程，标准化每个步骤的判定和执行，大幅提高可维护性和可拓展性


run-1.51（进行中）
------------------------------------------------------------------------
1.新增针对follow操作的block检测。每次按follow按钮之后都检测block提醒。如果检测到，立即报错并退出脚本
2.新增两个快捷参数：-pc,-gcdi。分别指代-p cookies和-g -c -di


run-1.50
------------------------------------------------------------------------
1.新增对task循环次数的支持。以前只有是否循环，现在改为指定次数
2.新增对远程任务的支持。远程任务分两类：通用的task；针对特定instagram定制的task。详见readme.txt
3.登录流程再次遇到细微调整，现在登录过程中如果需要验证码，在只有1种验证方式的情况下，可能无需选择。脚本已经支持这个改变


cookiemaker-1.00
------------------------------------------------------------------------
新增cookiemaker.py脚本用于手动产生cookie
详细用法见readme.txt


droplet-1.06（进行中）
------------------------------------------------------------------------
1.由于统计地不准确，此版本起，取消脚本内存统计功能
2.修复开启新脚本时，由于脚本自定义参数错误而导致的http服务器卡住的问题


run-1.49
------------------------------------------------------------------------
1.新增在云服务器上对gui模式的支持。实现原理为在云上运行Xvfb服务
2.从此版本开始，在开启gui模式的时候，可以通过插件来让chrome支持代理
3.支持warm-up模式。详见readme.txt
4.修复了chrome加载cookie出错的问题。chrome里，cookie的expiry字段，必须强制确保为unix timestamp整数
5.为进一步减少脚本流量，优化like脚本的一些细节


run-1.48
------------------------------------------------------------------------
1.新增半速版本的follow，like脚本
2.由于最近发生的代理无法连接的问题，install.sh现在固定安装66.0版本的firefox，并阻止自动更新
3.在login流程中，增加对2-way authentication页面的支持
4.将tag也作为pull提取内容的一部分。现在的--pull参数将自动提取目标脚本的tag信息
5.在login流程中，用户每尝试一次输入账号密码，都及时在服务器中用最新的IG账号标记此脚本
6.新增--disable-image参数，用于禁止加载图片


droplet-1.05
------------------------------------------------------------------------
1.支持不使用代理进行login。新增一个参数--use-proxy来控制是否使用代理，默认为使用
2.新增开机自动开启Xvfb服务以支持gui模式的脚本运行在云端


run-1.47
------------------------------------------------------------------------
1.弃用InstaPy自带的中断响应函数，自行捕捉SIGINT、SIGTERM、SIGKILL三种信号
2.为了更好地支持重试登录，扩充了脚本登录的事件集
    a.session结束和script结束现在是独立的事件，具有更强的逻辑含义
    b.session结束事件与释放proxypool代理关联，script结束事件与判断登录结果关联
3.更新脚本在query模式时的数据库查询方式，现在能更准确及时地反映前端用户输入