@@ -1,3 +1,6 @@
+本文档更新日期：20190727
+
+
 ***************************
 安装
 ***************************
@@ -20,7 +23,7 @@ droplet.py命令行参数用法
 ***************************
 
 
-python3 droplet.py [-n 服务器名称] [-t 服务器类型]
+python3 droplet.py [-n 服务器名称] [-t 服务器类型] [其他可选参数]
 ------------------------------------------------------------------------
 -n，服务器名称用来辨识一台特定的droplet服务器。名称必须保证唯一。如果不指定这个参数，系统将自动分配一个唯一的名字。
 -t，服务器类型用来标记服务器用途。只可取两个值，login或regular。如果不指定这个参数，默认为regular。
@@ -43,9 +46,10 @@ cookiemaker.py命令行参数用法
 ***************************
 
 
-python3 cookiemaker.py [-c]
+python3 cookiemaker.py [-c] [-x 代理地址:端口:用户名:密码]
 ------------------------------------------------------------------------
 默认情况打开firefox。如果指定了-c（--chrome），则打开chrome。
+支持使用-x（--proxy）参数初始化浏览器代理。
 打开浏览器后，手动进行任何操作。完成操作之后，回到命令行界面，输入"r"，关闭浏览器。
 此时，脚本已经保存本次浏览器会话中产生的cookies。
 按照脚本接下来的提示，输入instagram用户名和密码，脚本会在主服务器为该instagram创建一条数据。
@@ -60,7 +64,7 @@ python3 cookiemaker.py [-c]
 
 
 (1)基本语法
-python3 like.py [IG用户] [IG密码] [代理地址:端口:用户:密码]
+python3 like.py [IG用户] [IG密码] [代理地址:端口:用户:密码] ...
 ------------------------------------------------------------------------
 除脚本名称外，其他参数均可不填。如果缺少必要信息，脚本运行时会在命令行询问。
 
