@@ -7,6 +7,11 @@ run-2.00（进行中）
 2.全面改版login流程，标准化每个步骤的判定和执行，大幅提高可维护性和可拓展性
 
 
+cookiemaker-1.01（进行中）
+------------------------------------------------------------------------
+1.支持通过参数初始化浏览器代理
+
+
 run-1.51（进行中）
 ------------------------------------------------------------------------
 1.新增针对follow操作的block检测。每次按follow按钮之后都检测block提醒。如果检测到，立即报错并退出脚本
@@ -22,8 +27,8 @@ run-1.50
 
 cookiemaker-1.00
 ------------------------------------------------------------------------
-新增cookiemaker.py脚本用于手动产生cookie
-详细用法见readme.txt
+1.新增cookiemaker.py脚本用于手动产生cookie
+2.详细用法见readme.txt
 
 
 droplet-1.06（进行中）
